Fix icon not aligned with img

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -825,6 +825,7 @@ body.inboxsdk__gmailv1css
 td.gH div.gK span:first-child > img {
   margin-right: 3px;
   margin-left: 3px;
+  margin-top: 0px;
 }
 
 td.gH div.gK span:first-child > *:last-child {
